# sonora

./: .gitignore  README.md  multi-engine-plan-refactor.md  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  package.yml
benchmark/: my-reference.txt
docs/: architecture.md
scripts/: download-models.mjs  perf-watch.mjs  setup-faster-whisper-sidecar.mjs  setup-parakeet-sidecar.mjs  setup-whisper-sidecar.mjs  tauri-dev-profiling.mjs
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/resources/: README.md
src-tauri/resources/faster-whisper/: worker.py
src-tauri/resources/models/: README.md
src-tauri/resources/parakeet/: worker.py
src-tauri/src/: audio.rs  config.rs  environment.rs  insertion.rs  lib.rs  main.rs  pipeline.rs  postprocess.rs  profile.rs  recovery.rs  runtime_log.rs  settings_store.rs  transcriber.rs  vad.rs
src/audio/: mic-capture.worklet.js
src/components/: ErrorBanner.tsx  MicLevelPeakIndicator.tsx  Phase1Controls.tsx  Phase2InsertionPanel.tsx  Phase2SettingsPanel.tsx  Phase3StatusPanel.tsx  Phase4EnvironmentPanel.tsx  Phase4RecoveryPanel.tsx  RecentInsertionsPanel.tsx  RecentTranscriptsPanel.tsx
src/context/: AppControllerContext.tsx
src/domain/: audio-chunk.test.ts  audio-chunk.ts  audio-resample.test.ts  audio-resample.ts  dictation-machine.test.ts  dictation-machine.ts  insertion-history.test.ts  insertion-history.ts  settings.test.ts  settings.ts
src/hooks/: useAppController.ts  useLiveMicCapture.ts
src/services/: phase1.ts  phase2.ts  phase3.ts  (+1 more)
