[package]
name = "sonora-dictation"
version = "0.1.0"
description = "Offline cross-platform dictation app"
authors = ["Sonora"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sonora_dictation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["desktop"]
desktop = ["dep:tauri", "dep:tauri-plugin-opener"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
hound = "3"
